# esp32-service-health-panel

./: .env.example  .gitignore  BOOT_FIX_SUMMARY.md  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs  network.rs  persian_status.rs  railway_health.rs
src/health/: graphviz.rs  ipinfo.rs  mod.rs  polaris.rs
tools/: generate_persian_status.py
