[package]
name = "esp32-lcd-test"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "esp32-lcd-test"
harness = false

[dependencies]
# ESP-IDF HAL: direct hardware access without Arduino
esp-idf-svc = { version = "0.51", features = ["binstart"] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
embedded-svc = "0.28"
log = "0.4"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[profile.release]
opt-level = "s"   # Minimize binary size

[profile.dev]
opt-level = "s"   # Keep dev builds small to save flash space
debug = true
